PELO AMOR DE DEUS FUNCIONAAAA

--- a/.github/workflows/multiprovider.yaml
+++ b/.github/workflows/multiprovider.yaml
@@ -37,12 +37,12 @@ jobs:
 
     - name: Step 05 Create S3 Bucket
       run: aws s3api create-bucket --bucket tf-state-gsiacdani --region us-east-1   
-          
+        
     - name: Create DynamoDB Table
-      run: aws dynamodb create-table --table-name tf-state-gsiacdani --attribute-definitions AttributeName=LockID,AttributeType=S --key-schema AttributeName=LockID,KeyType=HASH --provisioned-throughput ReadCapacityUnits=5,WriteCapacityUnits=5     
-  
+      run: aws dynamodb create-table --table-name tf-state-danigsiac --attribute-definitions AttributeName=LockID,AttributeType=S --key-schema AttributeName=LockID,KeyType=HASH --provisioned-throughput ReadCapacityUnits=5,WriteCapacityUnits=5
+      
     - name: Step Configure Backend for Terraform
-      run: echo 'terraform { backend "s3" { bucket = "tf-state-gsiacdani" key = "path/to/terraform.tfstate" region = "us-east-1" } }' > backend.tf       
+      run: echo 'terraform { backend "s3" { bucket = "tf-state-gsiacdani" key = "path/to/terraform.tfstate" region = "us-east-1" } }' > backend.tf   
 
     - name: Step 06 - Terraform Init
       run : terraform -chdir=./terraform/aws init -input=false  
